kubernetes/charts/cilium/manifests/service-kubernetes.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-apiserver
  namespace: kube-system
  annotations:
    lbipam.cilium.io/ips: 10.242.20.160
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: kube-apiserver
    app.kubernetes.io/component: control-plane
  ports:
    - name: https
      port: 6443
      protocol: TCP
      targetPort: 6443
