kubernetes/charts/cilium/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/gateway.networking.k8s.io/httproute-v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-options: Replace=true
spec:
  parentRefs:
    - name: traefik-internal
      namespace: traefik-system
      sectionName: https
  hostnames:
    - hubble-10-242-20-170.lab-local.bichls.dev
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
